--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,9 @@
 /* Variables globales */
 :root {
   /* Colores */
-  --color1: #ffffff; /* blanco */
-  --color2: #000000; /* negro */
-  --color3: #007bff; /* azul */
+  --color1: #f0f0f0; /* blanco */
+  --color2: #222222; /* negro */
+  --color3: #00aaff; /* azul */
 
   /* Fuentes */
   --font-title: "Segoe UI", Helvetica, Arial, sans-serif;
