--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -20,15 +20,15 @@
 .nav-hover {
   font-family: var(--font-title);
   font-weight: 500;
-  text-transform: uppercase;
-  font-size: 1rem;
+  
+  font-size: 1.2em;
   color: var(--color2);
   text-decoration: none
 }
 
 .proyectos-text {
   font-weight: 600;
-  font-size: 1rem;
+  font-size: 1.2rem;
   margin: 0px;
   padding: 0px;
   color:var(--color3)
