--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -1,53 +1,45 @@
-/* ===============================
-   CARDS.CSS
-   =============================== */
-
 .card-item {
-  flex-shrink: 0;
-  width: 500px;
-  height: 500px;
-  position: relative;
-  overflow: hidden;
-  cursor: pointer;
-}
-
-.card-item img {
   width: 100%;
-  height: 100%;
-  object-fit: cover;
-  transition: transform 0.4s ease;
-}
-
-/* La capa superpuesta con el texto */
-.card-item-overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(255, 255, 255, 0.8);
-  color: black;
+  height: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  text-align: center;
-  padding: 1rem;
-  opacity: 0;
-  transition: opacity 0.4s ease, transform 0.4s ease;
+  position: relative;
+  overflow: hidden;
+  padding-top: 15px;
+  margin-top: 40px;
+  margin-bottom: 40px;
 }
 
-.card-item-overlay h3 {
-  font-size: 1.5rem;
-  margin-bottom: 0.5rem;
+.card-item img {
+  /* El contenedor de la imagen ahora tiene un borde negro de 1px */
+  padding: 1px;
+  border: 1px solid black;
+  width: 150px;
+  height: 150px;
+  object-fit: fit;
+  transition: transform 0.6s ease-in-out;
+  z-index: 1;
+  cursor: pointer;
+  margin: 30px;
 }
 
-/* Efecto de hover */
-.card-item:hover .card-item-overlay {
-  opacity: 1;
-  transform: scale(1);
+
+
+
+.card-item img:hover {
+  transform: scale(1.5);
+  transition: transform 0.6s ease-in-out;
 }
 
-.card-item:hover img {
-  transform: scale(1.05);
+.card-item h3 {
+  margin-top: 10px;
+  z-index: 2;
+  font-weight: 400;
+  font-family: var(--font-title);
+}
+
+.card-item p {
+  z-index: 2;
+  font-family: var(--font-title);
 }
