--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -4,7 +4,7 @@
     left: 0;
     width: 100vw;
     height: 100vh;
-    background: rgba(255,255, 255, 0.9);
+    background: rgba(255, 255, 255, 0.9);
     display: flex;
     justify-content: center;
     align-items: flex-end;
@@ -12,9 +12,13 @@
 }
 
 .modal-content {
-    width: 100vw;
+    width: 90vw;
+    max-width: 1600px;
+    /* 👈 Limita el ancho en pantallas muy grandes */
     height: 90vh;
     background: transparent;
+    padding-bottom: 20px;
+    box-sizing: border-box;
     border-radius: 12px;
     overflow-y: hidden;
     position: relative;
@@ -24,13 +28,13 @@
 }
 
 .modal-close {
-  position: absolute;
-  top: 10px;
-  right: 15px;
-  background: transparent;
-  border: none;
-  font-size: 22px;
-  cursor: pointer;
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    background: transparent;
+    border: none;
+    font-size: 22px;
+    cursor: pointer;
 }
 
 .modal-image-container {
@@ -38,12 +42,21 @@
     display: flex;
     justify-content: center;
     align-items: center;
-   
+    flex-grow: 1;
+    max-height: 80%
 }
 
 .modal-main-image {
-    width: 750px;
-    max-height: 100%; 
+    /* 👈 AJUSTE CLAVE para la legibilidad del render 1080x1080 */
+    /* Usamos max-width y max-height en relación al contenedor (modal-image-container) */
+    max-width: 100%;
+    max-height: 100%;
+    width: auto;
+    /* Permite que el ancho se ajuste proporcionalmente */
+    height: auto;
+    /* Permite que el alto se ajuste proporcionalmente */
+    object-fit: contain;
+    /* Asegura que la imagen completa (1080x1080) sea visible */
     border-radius: 10px;
 }
 
