--- a/src/components/SobreMi/sobremi.css
+++ b/src/components/SobreMi/sobremi.css
@@ -47,11 +47,11 @@
   margin-bottom: 10%;
 }
 
-.container-texts-about{
+.container-texts-about {
 
   display: flex;
   justify-content: space-between;
- 
+
 
   margin-top: 5%;
   padding-top: 6%;
@@ -62,3 +62,38 @@
   border-radius: 15px;
   background-color: rgba(240, 240, 240, 0.3);
 }
+
+
+@media (min-width: 319px) and (max-width: 768px) {
+
+  .about-me-section {
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-top: 4.5em;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .name-title {
+    font-size: 4.5rem;
+  }
+
+  .container-foto-about-me {
+    width: 100%;
+    align-self: center;
+  }
+
+  .container-texts-about {
+    flex-direction: column;
+  }
+
+  .text-aboutme {
+    width: 100%;
+    text-align: justify;
+  }
+
+
+}
+
